# dt-agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  FLOW_DIAGRAM.md  IMPLEMENTATION_STATUS.md  Makefile  NEXT_STEPS.md  QUICK_START.md  README.md  README_AUTOMATION.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/: config.yaml.example
example-data/: RE_ R350.msg  RE_ quote for server.msg  project example.xlsx
kubernetes/: deployment.yaml  pvc.yaml
local-testing/: Makefile  README.md
local-testing/config/: config.local.yaml
local-testing/scripts/: setup.sh  test-docker.sh  test-local.sh
src/: __init__.py  main.py
src/automation/: __init__.py  __main__.py  email_processor.py  imap_watcher.py  service.py  watcher.py
src/business_logic/: __init__.py  pricing.py  quote_generator.py
src/document_processor/: __init__.py  excel_parser.py  pdf_parser.py  unifier.py
src/email_intake/: __init__.py  content_extractor.py  parser.py
src/file_manager/: __init__.py  organizer.py
