[project]
name = "dt-agent"
version = "0.1.0"
description = "Automated quote processing system for technology resellers"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "extract-msg>=0.41.1",
    # "mailparser>=3.20.0",  # Not available in PyPI, using extract-msg as primary parser
    "imapclient>=2.3.1",
    "openpyxl>=3.1.2",
    "pandas>=2.1.3",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.3",
    "pypdf>=3.17.4",
    "xlrd>=2.0.1",
    "tabula-py>=2.8.0",
    "beautifulsoup4>=4.12.2",
    "html5lib>=1.1",
    "langdetect>=1.0.9",
    "chardet>=5.2.0",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "pillow>=10.1.0",
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    # Note: googletrans has dependency conflicts, using alternative
    # "googletrans==4.0.0rc1",  # Conflicts with httpx - will use alternative translation
    "elasticsearch>=8.11.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "click>=8.1.7",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Using [project.optional-dependencies] for dev dependencies
# uv will use this instead of deprecated tool.uv.dev-dependencies

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

